--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,12 @@ services:
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       - ./:/app:delegated
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "host.docker.internal:192.168.1.194"
     environment:
       - XDEBUG_MODE=debug
       - XDEBUG_CLIENT_HOST=host.docker.internal
       - XDEBUG_CLIENT_PORT=9003
     ports:
       - '81:80'
-      - '9004:9003'
     links:
       - mysql
