--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "yiisoft/yii2-app-basic",
-    "description": "Admin Keys AK",
+    "description": "Ip Checker",
     "keywords": ["yii2", "framework", "basic", "project template"],
     "homepage": "http://www.yiiframework.com/",
     "type": "project",
@@ -13,94 +13,70 @@
         "source": "https://github.com/yiisoft/yii2"
     },
     "minimum-stability": "dev",
-    "require": {
-        "php": "^7.4",
-        "yiisoft/yii2": "dev-master",
-        "kartik-v/yii2-krajee-base": "dev-master",
-        "yiisoft/yii2-bootstrap": "2.0.10",
-        "yiisoft/yii2-swiftmailer": "2.1.1",
-        "yiisoft/yii2-queue": "2.3.0",
-        "yiisoft/yii2-sphinx": "2.0.12",
-        "rmrevin/yii2-fontawesome": "2.17",
-        "kartik-v/yii2-widgets": "3.4.1",
-        "kartik-v/yii2-helpers": "1.3.7",
-        "kartik-v/yii2-checkbox-x": "*",
-        "kartik-v/yii2-dialog": "*",
-        "kartik-v/yii2-popover-x": "*",
-        "kartik-v/yii2-money": "*",
-        "kartik-v/yii2-nav-x": "1.2.4",
-        "kartik-v/yii2-sortable": "*",
-        "kartik-v/yii2-context-menu": "1.2.2",
-        "kartik-v/yii2-icons": "1.4.4",
-        "kartik-v/yii2-dynagrid": "1.5.1",
-        "kartik-v/yii2-mpdf":"dev-master",
-        "kartik-v/yii2-detail-view": "*",
-        "kartik-v/yii2-editable": "@dev",
-        "kartik-v/yii2-export": "*",
-        "kartik-v/yii2-grid": "^3.0",
-        "kartik-v/yii2-builder": "1.6.4",
-        "kartik-v/yii2-datecontrol": "1.9.7",
-        "hail812/yii2-adminlte3": "~1.1",
-        "yii2mod/yii2-sweet-alert": "1.3",
-        "guzzlehttp/guzzle": "6.5.2",
-        "frostealth/yii2-aws-s3": "1.0.0",
-        "phpseclib/phpseclib": "2.0.11",
-        "bethrezen/yii2-cached-rbac-dbmanager": "dev-master",
-        "raoul2000/yii2-workflow": "1.2.0",
-        "krisengine/yii2-graylog2": "dev-master",
-        "philippfrenzel/yii2fullcalendar": "3.9.0",
-        "clegginabox/pdf-merger": "dev-master",
-        "phpoffice/phpspreadsheet": "^1.11",
-        "phpoffice/phpword": "v0.18.*",
-        "zircote/swagger-php": "^3.0",
-        "bower-asset/swagger-ui": "^3.25",
-        "2amigos/yii2-chartjs-widget": "3.0.1",
-        "econea/nusoap": "^0.9.8",
-        "kartik-v/yii2-date-range": "1.6.9",
-        "dompdf/dompdf": "^0.8.5",
-        "2amigos/yii2-tinymce-widget" : "~1.1",
-        "kartik-v/yii2-number": "*",
-        "kartik-v/yii2-tabs-x": "1.2.7",
-        "vilochane/yii2-barcode-generator": "dev-master",
-        "kartik-v/yii2-dropdown-x": "dev-master",
-        "kartik-v/yii2-bootstrap4-dropdown": "@dev",
-        "diggindata/yii2-signaturepad": "@dev",
-        "inquid/yii2-signature": "dev-master",
-        "kartik-v/yii2-password": "@dev"
+      "require": {
+        "php": "^7.4 || ^8.0",
+        "yiisoft/yii2": "~2.0.45",
+        "kartik-v/yii2-krajee-base": "^3.0",
+        "yiisoft/yii2-bootstrap": "^2.0.11",
+        "yiisoft/yii2-swiftmailer": "^2.1.3",
+        "yiisoft/yii2-queue": "^2.3.3",
+        "yiisoft/yii2-sphinx": "^2.0.13",
+        "rmrevin/yii2-fontawesome": "^3.7",
+        "kartik-v/yii2-widgets": "^3.4.1",
+        "kartik-v/yii2-helpers": "^1.3.9",
+        "kartik-v/yii2-checkbox-x": "^1.0.7",
+        "kartik-v/yii2-dialog": "^1.0.6",
+        "kartik-v/yii2-popover-x": "^1.3.5",
+        "kartik-v/yii2-money": "^1.2.0",
+        "kartik-v/yii2-nav-x": "^1.2.5",
+        "kartik-v/yii2-sortable": "^1.2.2",
+        "kartik-v/yii2-context-menu": "^1.2.5",
+        "kartik-v/yii2-icons": "^1.4.8",
+        "kartik-v/yii2-dynagrid": "^1.5.4",
+        "kartik-v/yii2-detail-view": "^1.8.6",
+        "kartik-v/yii2-editable": "^1.8.0",
+        "kartik-v/yii2-export": "^1.4.2",
+        "kartik-v/yii2-grid": "^3.5.0",
+        "kartik-v/yii2-builder": "^1.6.9",
+        "kartik-v/yii2-datecontrol": "^1.9.9",
+        "hail812/yii2-adminlte3": "^1.1.8",
+        "yii2mod/yii2-sweet-alert": "^1.3",
+        "guzzlehttp/guzzle": "^7.5",
+        "frostealth/yii2-aws-s3": "^2.1",
+        "phpseclib/phpseclib": "^3.0",
+        "raoul2000/yii2-workflow": "^1.2.0",
+        "philippfrenzel/yii2fullcalendar": "^4.0",
+        "phpoffice/phpspreadsheet": "^1.28",
+        "phpoffice/phpword": "^1.0",
+        "zircote/swagger-php": "^4.7",
+        "bower-asset/swagger-ui": "^5.0",
+        "2amigos/yii2-chartjs-widget": "^3.0.1",
+        "econea/nusoap": "^0.9.7",
+        "kartik-v/yii2-date-range": "^1.7.3",
+        "2amigos/yii2-tinymce-widget": "^1.1.3",
+        "kartik-v/yii2-number": "^1.0.4",
+        "kartik-v/yii2-tabs-x": "^1.2.8",
+        "kartik-v/yii2-dropdown-x": "^1.2.0",
+        "kartik-v/yii2-bootstrap4-dropdown": "^1.0.4",
+        "kartik-v/yii2-password": "^1.5.3"
     },
     "require-dev": {
-        "yiisoft/yii2-debug": "~2.1.0",
-        "yiisoft/yii2-gii": "~2.2.0",
-        "yiisoft/yii2-faker": "~2.0.0",
-
-        "codeception/base": "^2.2.3",
-        "codeception/specify": "~0.4.3"
+        "yiisoft/yii2-debug": "^2.1.22",
+        "yiisoft/yii2-gii": "^2.2.5",
+        "yiisoft/yii2-faker": "^2.0.5",
+        "codeception/codeception": "^5.0",
+        "codeception/module-yii2": "^1.1",
+        "codeception/module-asserts": "^3.0",
+        "codeception/specify": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "miloschuman\\highcharts\\": "src/",
-            "kartik\\widgets\\": "",
-            "kartik\\helpers\\": "",
-            "kartik\\dropdown\\": "",
-            "kartik\\checkbox\\": "",
-            "kartik\\dialog\\": "",
-            "kartik\\detail\\": "",
-            "kartik\\popover\\": "",
-            "kartik\\editable\\": "",
-            "kartik\\money\\": "",
-            "kartik\\nav\\": "",
-            "kartik\\sortable\\": "",
-            "kartik\\cmenu\\": "",
-            "kartik\\icons\\": "",
-            "kartik\\grid\\": "",
-            "kartik\\dynagrid\\": "",
-            "kartik\\export\\": "",
-            "app\\commands\\": "commands/"
+            "app\\": ""
         }
     },
     "config": {
         "allow-plugins": {
-            "yiisoft/yii2-composer" : true
+            "yiisoft/yii2-composer": true
         },
         "process-timeout": 1800,
         "fxp-asset": {
@@ -120,8 +96,8 @@
         "yii\\composer\\Installer::postCreateProject": {
             "setPermission": [
                 {
-                    "runtime": "0777",
-                    "web/assets": "0777",
+                    "runtime": "0775",
+                    "web/assets": "0775",
                     "yii": "0755"
                 }
             ]
